# DBC-Editor

./: .gitignore  CMakeLists.txt  README.md  TO DO.txt
.github/workflows/: release.yml
build-linux/: CMakeCache.txt
src/: attributeswidget.cpp  attributeswidget.h  bitlayoutwidget.cpp  bitlayoutwidget.h  dbcdialogs.h  dbcdocument.cpp  dbcdocument.h  dbcmodel.h  dbcutil.h  main.cpp  mainwindow.cpp  mainwindow.h  messageswidget.cpp  messageswidget.h  nodeswidget.cpp  nodeswidget.h  overviewwidget.cpp  overviewwidget.h  signalswidget.cpp  signalswidget.h  valuetableswidget.cpp  valuetableswidget.h
